@@ -23,9 +23,11 @@
 
 <h4>Description</h4>
 
-<pre>phrase(NonTerminal, Input)</pre>
+<pre>phrase(NonTerminal, Input)
+phrase(::NonTerminal, Input)
+phrase(Object::NonTerminal, Input)</pre>
 <p>
-True if the list <code>Input</code> can be parsed using the specified non-terminal <code>NonTerminal</code>. This method also accepts grammar rule bodies in the first argument (with the limitation that cuts are only supported in local calls).
+True if the list <code>Input</code> can be parsed using the specified non-terminal <code>NonTerminal</code>. This method also accepts grammar rule bodies in the first argument (with the limitation that cuts are only supported in local calls). This built-in method is declared private and thus cannot be used as a message to an object. When using a back-end Prolog compiler supporting a module system, calls in the format <code>phrase(Module:NonTerminal, Input)</code> may also be used.
 </p>
 
 <h4>Template and modes</h4>
@@ -51,20 +53,19 @@ True if the list <code>Input</code> can be parsed using the specified non-termin
 
 <h4>Examples</h4>
 
-<pre>| ?- sentence::phrase(sentence, [the, girl, likes, the, boy]).
-
-yes
-
-
-| ?- calculator::phrase(expr(Value), "1+2-3*4").
-
-Value = -9
-yes</pre>
+<dl>
+	<dt>To parse a list using a non-terminal in the context of the object or category containing the call:</dt>
+		<dd><code>phrase(NonTerminal, Input)</code></dd>
+	<dt>To parse a list using a non-terminal defined in <em><a class="glossary" title="Go to glossary definition" href="../../glossary.html#self">self</a></em>:</dt>
+		<dd><code>phrase(::NonTerminal, Input)</code></dd>
+	<dt>To parse a list using a non-terminal defined in an explicit object:</dt>
+		<dd><code>phrase(Object::NonTerminal, Input)</code></dd>
+</dl>
 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: October 26, 2006</span>
+		<span>Last updated on: May 15, 2010</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="../index.html#methods">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="phrase3.html">next</a></span><br/>
