@@ -502,7 +502,7 @@ You may have noticed that Logtalk defines <code>{}/1</code> as a control constru
 <p>
 After compiling and loading this code, we may try the following query:
 </p>
-<pre>| ?- bypass::phrase(foo, _, _).
+<pre>| ?- logtalk &lt;&lt; phrase(bypass::foo, _, _).
 
 bar predicate called
 yes</pre>
@@ -628,7 +628,7 @@ Logtalk provides two built-in methods for inspecting object predicates: <a title
 <h3 id="predicates_parsing">Definite clause grammar parsing methods</h3>
 
 <p>
-Logtalk supports two definite clause grammar parsing built-in methods, <a title="Consult reference manual" href="../refman/methods/phrase2.html"><code>phrase/2</code></a> and <a title="Consult reference manual" href="../refman/methods/phrase3.html"><code>phrase/3</code></a>, with definitions similar to the predicates with the same name found on most Prolog compilers that support definite clause grammars.
+Logtalk supports two definite clause grammar parsing built-in private methods, <a title="Consult reference manual" href="../refman/methods/phrase2.html"><code>phrase/2</code></a> and <a title="Consult reference manual" href="../refman/methods/phrase3.html"><code>phrase/3</code></a>, with definitions similar to the predicates with the same name found on most Prolog compilers that support definite clause grammars. These methods cannot be used as messages to objects.
 </p>
 
 <h3 id="predicates_expanding">Term and goal expansion methods</h3>
@@ -738,7 +738,7 @@ Currently, there is no clean workaround for calling non-standard Prolog built-in
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: April 17, 2010</span>
+		<span>Last updated on: May 15, 2010</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="categories.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="inheritance.html">next</a></span><br/>
