@@ -24,7 +24,7 @@
 %  from the project directory. Note that, for setting Logtalk flag values,
 %  you must use the set_logtalk_flag/2 predicate (wrapped in a directive
 %  initialization/1) as the scope of the set_logtalk_flag/2 directive is
-%  always local to an entity or to a source file.
+%  always local to the entity or the source file containing it.
 %
 %  If you use more than one back-end Prolog compiler and want to use
 %  different settings per compiler you will need to use the Logtalk 
