@@ -21,6 +21,11 @@ RELEASE NOTES
     change allows for simpler and more robust handling of Prolog proprietary
     directives, specially module directives.
 
+    Changed the type of the built-in methods phrase/2-3 from public predicates
+    to private predicates in order to match the semantics of other built-in
+    meta-predicates. Updated the "dcgs" example and the corresponding unit
+    tests to comply with the new phrase/2-3 predicate scope.
+
     Corrected a bug in the implementation of the phrase/2-3 built-in methods
     that could allow access to non-visible grammar rules.
 
